--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -5,7 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".EditActivity">
+
+    <TextView
+        android:id="@+id/tvID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/id" />
+
+    <EditText
+        android:id="@+id/etID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/tvTitle"
@@ -14,11 +27,10 @@
         android:text="@string/title" />
 
     <EditText
-        android:id="@+id/etTitle"
+        android:id="@+id/etTitle2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/tHint"
         android:inputType="textPersonName" />
 
     <TextView
@@ -28,11 +40,10 @@
         android:text="@string/singers" />
 
     <EditText
-        android:id="@+id/etSingers"
+        android:id="@+id/etSingers2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/sHint"
         android:inputType="textPersonName" />
 
     <TextView
@@ -42,11 +53,10 @@
         android:text="@string/year" />
 
     <EditText
-        android:id="@+id/etYear"
+        android:id="@+id/etYear2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/yHint"
         android:inputType="textPersonName" />
 
     <TextView
@@ -56,44 +66,39 @@
         android:text="@string/stars" />
 
     <RadioGroup
-        android:id="@+id/rg"
+        android:id="@+id/rg2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <RadioButton
-            android:id="@+id/star1"
+            android:id="@+id/opt1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/star1" />
 
         <RadioButton
-            android:id="@+id/star2"
+            android:id="@+id/opt2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/star2" />
 
         <RadioButton
-            android:id="@+id/star3"
+            android:id="@+id/opt3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/star3" />
 
         <RadioButton
-            android:id="@+id/star4"
+            android:id="@+id/opt4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/star4" />
 
         <RadioButton
-            android:id="@+id/star5"
-            android:layout_width="wrap_content"
+            android:id="@+id/opt5"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/star5" />
     </RadioGroup>
 
@@ -103,20 +108,24 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnInsert"
+            android:id="@+id/btnUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_margin="2dp"
-            android:text="@string/btnInsert" />
+            android:text="@string/btnUpdate" />
 
         <Button
-            android:id="@+id/btnList"
+            android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_margin="2dp"
-            android:text="@string/btnList" />
+            android:text="@string/btnDelete" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnCancel" />
 
 </LinearLayout>
