--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -66,7 +66,7 @@
         android:text="@string/stars" />
 
     <RadioGroup
-        android:id="@+id/rg2"
+        android:id="@+id/etRG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
